--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.8",
     "async-mutex": "^0.5.0",
+    "bootstrap": "5.3.3",
     "framer-motion": "^11.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
